# llama-monitor

./: .eslintrc.cjs  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  build_output.txt  commit-msg.txt  eslint.config.js  opencode.jsonc  package-lock.json  package.json  pr-body.txt  pr-title.txt  renovate.json
.cargo/: audit.toml  config.toml
.claude/: settings.json
.github/: dependabot.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/release-please/: config.json5
.github/workflows/: ci.yml  codeql.yml  labeler.yml  release-please.yml  release.yml
docs/: .gitignore  2026-04-12-apple-silicon-implementation.md  20260420-modern_ui_enhancements.md  20260420-modern_ui_wireframes.md  20260420-progress-tracker.md  20260420-remote-agent-dev-setup.md  20260420-remote-agent-ux-install-update-plan.md  20260420-ui-test-runbook.md  20260420-visual-qa-checklist.md  20260422-windows-native-tray-roadmap.md  20260424-gpu-system-modernization.md  20260426-security_hardening.md  20260427-chat_enhancements.md  20260428-chat_ui_ux_improvements.md  20260429-context_compaction_options.md  20260430-appjs_refactor.md  20260502-window_architecture_cleanup_plan.md  BUGFIXES-20260503.md  README.md  cli-flags.md  cross-compilation.md  ui-improvements-20260503.md
docs/agents/: gguf-recovery.md  platform-details.md  playwright.md  security-details.md
docs/architecture/: 20260502-window_architecture_cleanup_plan.md  20260502-window_globals_inventory.md
docs/archive/: 20260515-security-audit.md
docs/chat/: 20260427-chat_enhancements.md  20260428-chat_ui_ux_improvements.md  20260503-ui-analysis.md
docs/gpu-hardware/: 20260423-context-window-live-tracking.md
docs/implementation/: 20260429-app_update_capability.md
docs/plans/: 20260505-modal_ui_improvements.md  20260505-windows_tray_webview.md  20260508-chat-guided-generation-decisions.md  20260510-adaptive-layout-enhancements.md  20260510-chat-system-evolution.md  20260510-explicit_persona_enhancements.md  20260510-width_enhancements.md  20260515-security-audit.md  20260516-tls_acme_implementation.md  20260517-security_part2.md  20260519-chat_archival.md  20260519-windows_compatibility_fixes.md  20260519-windows_service_packaging.md  20260524-android_architecture.md  20260529-spawn-v2-backend.md  20260529-spawn-v2-frontend.md  20260529-spawn-v2-overview.md  20260529-spawn-v2-research.md  20260529-spawn_llama_server_core.md  20260529-spawn_llama_server_updates.md  20260529-spawn_llama_server_ux.md  20260530-spawn_llama_server_ux_and_architecture.md  20260531-browser_navigation.md  20260611-pr215_review.md  20260611-rapid_mlx_integration.md  20260615-character_cards.md  20260615-native_mcp_support.md  20260616-api_rs_refector.md  20260618-llama_router_mode.md  20260619-low_power_enable_logging.md  20260619-speed-bench-spec-decoding.md  20260621-windows_support_consolidation.md  20260622-model_loading_progress.md  20260622-windows_build_toolchain.md  20260623-text_hierarchy_and_font_consistency.md  20260710-rapid_mlx_integration.md  20260710-rapid_mlx_roadmap.md  20260715-gguf_to_mlx_conversion_research.md  20260718-final_rapidmlx_followups.md  20260718-final_rapidmlx_followups_execution.md  (+5 more)
docs/reference/: api.md  binary-lifecycle.md  capabilities.md  chat.md  cli-flags.md  community-picks-example.json  community-picks.md  cross-compilation.md  dashboard.md  hermes-community-picks-cron.md  inference-tuning.md  model-library.md  navigation.md  phase-7-completion.md  quick-start.md  rapid-mlx-runtime.md  realtime-communication.md  remote-agent.md  rust_system_metrics_agent_instructions.md  security.md  setup-wizard.md  spawn-wizard.md  tls-architecture.md  tune-panel.md  ui-design-patterns.md  vram-estimator.md  websocket-schema.md  windows-sensor-bridge-implementation.md  windows-support.md
docs/screenshots/: FULL_UI_REVIEW_SUMMARY.md
docs/security/: 20260423-tool-call-blocked-state-detection.md
docs/ui-ux/: 20260420-progress-tracker.md  20260423-card-improvement-proposals.md
llama-monitor/: README.md  SEARCH_RESULTS.md
llama-monitor/docs/: 2026-04-12-mactop-test-script.sh
scripts/: build-release-targets.sh  build-single-target.sh  cfg-audit.sh  check-unused-screenshots.sh  release-preflight.sh  validate-js.mjs  validate-js.sh  vendor-copy.mjs
sensor_bridge/: Program.cs  sensor_bridge.csproj
src/: acme.rs  agent.rs  certs.rs  chat_storage.rs  cli.rs  collections.rs  config.rs  lhm.rs  lhm_persistence.rs  lib.rs  main.rs  memory_availability.rs  model_download.rs  platform.rs  remote_ssh.rs  state.rs  system.rs  tray.rs
src/gpu/: apple.rs  dummy.rs  env.rs  mactop_cache.rs  mod.rs  nvidia.rs  rocm.rs  wmi_gpu.rs
src/hf/: mod.rs  qualify.rs
src/inference/: backend.rs  capabilities.rs  launch.rs  llama_cpp.rs  llama_cpp_capabilities.rs  metrics.rs  mod.rs  supervisor.rs
src/llama/: batch_import.rs  bench_runner.rs  gguf_meta.rs  llama_cpp_downloader.rs  metrics.rs  mod.rs  model_defaults.rs  model_memory_profile.rs  poller.rs  sampling_catalog.rs  server.rs  spawn_wizard.rs  vram_estimator.rs
src/models/: community_source_catalog.rs  gguf_import.rs  gguf_recovery.rs  import_lab.rs  library.rs  mod.rs
src/presets/: mod.rs
src/system/: poller.rs
src/web/: api.rs  auth.rs  mod.rs  static_assets.rs  ws.rs
static/: app.js  app.js.bak  compact.html  index.html  lhm.js  manifest.json  style.css  sw.js
static/css/: agent-modal.css  auth.css  base.css  cards-hardware.css  cards-inference.css  chat-guided-generation.css  chat.css  (+11 more)
tests/: README.md  auth_routing.rs  inference_test.rs  rapid_mlx_poller_test.rs  rapid_mlx_test.rs
(+294 files in other folders)
