[package]
name = "llama-monitor"
version = "0.18.0"
edition = "2024"

[features]
default = ["native-tray", "webview-popover"]
native-tray = ["dep:tray-icon", "dep:winit"]
webview-popover = ["dep:wry"]

[dependencies]
    anyhow = "1"
async-stream = "0.3"
hyper = { version = "1", features = ["http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring"] }
    base64 = "0.22"
    bytes = "1"
    clap = { version = "4", features = ["derive"] }
    dirs = "6"
    futures-util = "0.3"
    once_cell = "1"
    rcgen = "0.14"
    regex = "1"
    rusqlite = { version = "0.31", features = ["bundled", "backup"] }
    reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json"] }
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    shlex = "1"
    ssh2 = { version = "0.9", features = ["vendored-openssl"] }
    sysinfo = "0.38"
    tempfile = "3"
    tokio = { version = "1.51", features = ["full"] }
    tokio-stream = "0.1"
    url = "2"
    warp = { version = "0.4", features = ["server", "websocket"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
    warp-helmet = "1.0"
    tray-icon = { version = "0.23", optional = true }
    winit = { version = "0.31.0-beta.2", default-features = false, features = ["x11", "wayland"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
    mac-notification-sys = "0.6"

[target.'cfg(not(target_os = "windows"))'.dependencies]
    wry = { version = "0.55", default-features = false, features = ["os-webview"], optional = true }

[target.'cfg(windows)'.dependencies]
    wmi = { version = "0.18.4", features = ["default"] }

[target.'cfg(target_os = "linux")'.dependencies]
    gtk = "0.18"

[[test]]
name = "capabilities"
path = "tests/integration/capabilities.rs"
