[package]
name = "llama-monitor"
version = "0.21.3"
edition = "2024"

[features]
default = ["native-tray", "webview-popover"]
native-tray = ["dep:tray-icon", "dep:winit"]
webview-popover = ["dep:wry"]

[dependencies]
    anyhow = "1"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1", features = ["http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring"] }
    base64 = "0.22"
    aes-gcm = "0.10"
    argon2 = { version = "0.6.0-rc.8", features = ["rand_core"] }
    subtle = "2"
   rand = "0.10"
    rand_core = "0.10"
    sha1 = "0.11"
    sha2 = "0.11"
    hkdf = "0.13"
    bytes = "1"
    clap = { version = "4", features = ["derive"] }
    dirs = "6"
    futures-util = "0.3"
    once_cell = "1"
    rcgen = "0.14"
    regex = "1"
    rusqlite = { version = "0.39", features = ["bundled", "backup"] }
    reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json"] }
    serde = { version = "1", features = ["derive"] }
    serde_json = "1"
    shlex = "2"
    ssh2 = { version = "0.9", features = ["vendored-openssl"] }
    sysinfo = "0.39"
    tempfile = "3"
    tokio = { version = "1.52", features = ["full"] }
    tokio-stream = "0.1"
    url = "2"
    warp = { version = "0.4", features = ["server", "websocket"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
    warp-helmet = "1.0"
    tray-icon = { version = "0.24", optional = true }
    winit = { version = "0.31.0-beta.2", default-features = false, features = ["x11", "wayland"], optional = true }
    wry = { version = "0.55", default-features = false, features = ["os-webview"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
    mac-notification-sys = "0.6"

[target.'cfg(windows)'.dependencies]
    wmi = { version = "0.18.4", features = ["default"] }

[target.'cfg(target_os = "linux")'.dependencies]
    gtk = "0.18"

[dev-dependencies]
warp = { version = "0.4", features = ["test"] }

[[test]]
name = "capabilities"
path = "tests/integration/capabilities.rs"
